# in-house-mgmt

./: .gitignore  .pre-commit-config.yaml  PR70_REVIEW_PLAN.md  README.md  Readme.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.staging.yaml
.envs/.dev/: .discord  .django  .postgres
.github/: branch-rules.md
.github/workflows/: lint.yml  test.yml
Application/: README.md  eslint.config.mjs  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  proxy.ts  sentry.server.config.ts  vitest.config.mts  vitest.setup.ts
Application/app/: layout.tsx
Application/app/auth/: callback.tsx
Application/app/components/: ContactSearch.tsx  ContactTable.test.tsx  ContactTable.tsx  (+21 more)
Application/test-utils/: render.tsx
Server/: README.md  pyproject.toml  requirements.txt
Server/config/: asgi.py  pagination.py  settings.py  urls.py  wsgi.py
Server/config/settings/: base.py  local.py  production.py  test.py
Server/dggcrm/accounts/: adapters.py  admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
Server/dggcrm/accounts/migrations/: 0001_initial.py  0002_add_discord_id.py
Server/dggcrm/accounts/tests/: conftest.py  test_discord_id.py  test_user_management.py
Server/dggcrm/authmock/: apps.py  mock.py  urls.py
Server/dggcrm/authmock/tests/: test_urls.py
Server/dggcrm/contacts/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
Server/dggcrm/contacts/migrations/: 0001_initial.py  0002_alter_contact_options.py  0002_contact_server_member.py  0003_alter_contact_options.py  0003_remove_contact_server_member.py
Server/dggcrm/contacts/tests/: conftest.py  test_contact_filters.py  test_contact_permissions.py  test_contact_tag_filtering.py
Server/dggcrm/discord/: apps.py  client.py  permissions.py  serializers.py  urls.py  views.py
Server/dggcrm/discord/management/commands/: sync_discord_members.py
Server/dggcrm/discord/migrations/: 0001_create_discord_bot_group.py  0002_add_bot_users_to_discord_bot_group.py
Server/dggcrm/discord/tests/: conftest.py  test_client.py  test_sync_command.py  test_views.py
Server/dggcrm/events/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
Server/dggcrm/events/migrations/: 0001_initial.py  0002_add_event_type.py  0002_alter_event_options.py  0002_alter_event_options_alter_eventparticipation_options_and_more.py  0003_alter_event_location_address_and_more.py  0003_eventcategory_and_event_category_fk.py  0003_stagedevent_stagedeventparticipation.py  0004_alter_stagedevent_options.py  0005_per_tracker_staged_participations.py  0006_event_tracker_fk.py  0007_event_anonymous_fields.py
Server/dggcrm/events/tests/: conftest.py  test_event_category.py  test_event_permissions.py  test_membership_permissions.py  test_participation_permissions.py  test_views.py
Server/dggcrm/tickets/: admin.py  apps.py  models.py  permissions.py  serializers.py  template_context.py  urls.py  views.py
Server/dggcrm/tickets/migrations/: 0001_initial.py  0002_alter_ticket_options_alter_ticketcomment_options.py  0003_alter_ticket_options.py  0003_tickettemplate_ticket_template.py
Server/dggcrm/tickets/tests/: conftest.py  test_actions_permissions.py  test_assign_status_endpoints.py  test_claim_permissions.py  test_editable_fields.py  test_ticket_permissions.py
Server/docs/: USER_GROUPS.md
Server/fake/: create_users.py  fake_templates.py  main.py
compose/staging/: Dockerfile  nginx.conf
(+79 files in other folders)
