[project]
name = "dggcrm"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["dggcrm"]
DJANGO_SETTINGS_MODULE = "config.settings.local"
addopts = "--ds=config.settings.test --reuse-db -p no:asyncio"

[tool.taskipy.tasks]
test = "python -m pytest"
test_v = "python -m pytest -v"
cov = "pytest --cov=dggcrm --cov-report=html"
