[project]
name = "dggcrm"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["dggcrm"]
DJANGO_SETTINGS_MODULE = "config.settings.local"
addopts = "--ds=config.settings.test --reuse-db -p no:asyncio"

[tool.taskipy.tasks]
test = "python -m pytest"
test_v = "python -m pytest -v"
cov = "pytest --cov=dggcrm --cov-report=html"
hooks = "pre-commit install"
lint = "ruff check ."
lint_fix = "ruff check --fix ."
format = "ruff format ."
format_check = "ruff format --check ."

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
    "S",      # security (bandit)
    "T20",    # no print statements
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["dggcrm", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
