[project]
name = "dggcrm"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["dggcrm"]
DJANGO_SETTINGS_MODULE = "config.settings.local"
addopts = "--ds=config.settings.test --reuse-db -p no:asyncio"

[tool.taskipy.tasks]
test = "python -m pytest"
test_v = "python -m pytest -v"
cov = "pytest --cov=dggcrm --cov-report=html"
hooks = "pre-commit install"
lint = "ruff check ."
lint_fix = "ruff check --fix ."
format = "ruff format ."
format_check = "ruff format --check ."

[tool.ruff]
force-exclude = true
target-version = "py313"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    ".pytest_cache",
    "fake",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
    "S",      # security (bandit)
    "T20",    # no print statements
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF012", # DRF serializers and views use mutable class attributes as standard pattern
]

[tool.ruff.lint.per-file-ignores]
# Fake data script: random is fine, print is fine
"fake/main.py" = ["S311", "T201", "RUF005"]
# Ignore some common issues in linters
"**/tests/*.py" = ["S106", "PT009", "S101"]
"**/test.py" = ["S106", "PT009", "S101"]
"**/tests.py" = ["S106", "PT009", "S101"]
"**/settings/*" = ["F405"]

[tool.ruff.lint.isort]
known-first-party = ["dggcrm", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
